Avoid unsafe and native warnings