@@ -13,6 +13,8 @@
   <properties>
     <espresso.version>25.0.2</espresso.version>
     <demo.args></demo.args>
+    <truffle.classpath.jvm.args>--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow</truffle.classpath.jvm.args>
+    <truffle.modulepath.jvm.args>--enable-native-access=org.graalvm.truffle --sun-misc-unsafe-memory-access=allow</truffle.modulepath.jvm.args>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>21</maven.compiler.release>
   </properties>
@@ -53,6 +55,9 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.5</version>
+        <configuration>
+          <argLine>${truffle.classpath.jvm.args}</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -60,7 +65,7 @@
         <version>3.6.1</version>
         <configuration>
           <executable>${env.JAVA_HOME}/bin/java</executable>
-          <commandlineArgs>--module-path ${project.build.directory}/polyglot-libs --add-modules=org.graalvm.polyglot -cp ${project.build.outputDirectory} com.example.App ${demo.args}</commandlineArgs>
+          <commandlineArgs>${truffle.modulepath.jvm.args} --module-path ${project.build.directory}/polyglot-libs --add-modules=org.graalvm.polyglot -cp ${project.build.outputDirectory} com.example.App ${demo.args}</commandlineArgs>
         </configuration>
       </plugin>
       <plugin>
